--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="fantasy" class="scroll-smooth">
+<html lang="en" data-theme="cmyk" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8" />
@@ -21,7 +21,7 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
 
   <title>Ubyus Advisors</title>
 
-  <link rel="icon" type="image/svg+xml" href="./src/assets/images/logo.png" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
   <meta name="theme-color" content="#2196F3">
 
