--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,10 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
 
   <meta name="theme-color" content="#2196F3">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -36,3 +40,9 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
 
 
 </html>
+
+<style>
+  .prompt {
+    font-family: 'Prompt', sans-serif;
+  }
+</style>
