--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,13 +28,14 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./src/assets/css/animate/fade.css">
+  <link rel="stylesheet" href="./src/assets/css/animate/slide.css">
 
 </head>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
-  <script type="module" src="/src/assets/js/duns.js"></script>
 
 </body>
 
