--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://ubyusnewversion.github.io/frontend/dist/index.html">
+<meta http-equiv="refresh" content="0; url=https://jserranojunior.github.io/ubyusnewversion/frontend/dist/index.html">
