--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
 
   <title>Ubyus Advisors</title>
 
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="./logo.svg" />
 
   <meta name="theme-color" content="#2196F3">
 
@@ -35,7 +35,7 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="./src/main.ts"></script>
 
 </body>
 
