--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@ Dentre o maquinário, injetoras, CNCs, prensas, máquinas e robôs de solda, dob
   <link rel="icon" type="image/svg+xml" href="./logo.svg" />
 
   <meta name="theme-color" content="#2196F3">
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100&display=swap" rel="stylesheet">
